--- a/index.html
+++ b/index.html
@@ -3,29 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Valeria la Motherfucker</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-
-        #mensaje {
-            text-align: center;
-            font-size: 24px;
-            color: #333;
-        }
-    </style>
+    <title>Hola, esto no es un virus</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="mensaje">
-        <p>"A veces una mala racha puede ser el comienzo de algo mejor..."</p>
-        <img src="file:///C:/Users/josue/OneDrive/Desktop/Proyecto%20V/girasol.gif" alt="Imagen Animada">
+    <div class="container">
+        <div id="mensaje" class="mensaje">
+            <h1 id="titulo">Mensaje para Valeria La Motherfucker</h1>
+            <p id="contenido">(coma caca...)</p>
+            <button onclick="mostrarImagen()">Toque aquí (si le da la gana)</button>
+        </div>
+        <div id="imagen" class="oculto fade-in">
+            <img src="girasol.gif" alt="Girasol">
+            <audio autoplay loop>
+                <source src="Canción.mp3" type="audio/mpeg">
+            </audio>
+            <p id="frase" class="hidden">A veces las malas rachas son el comienzo de algo mejor...</p>
+        </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
