--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <div class="container">
         <div id="mensaje" class="mensaje">
-            <h1 id="titulo">Mensaje para Valeria La Motherfucker</h1>
-            <p id="contenido">(coma caca...)</p>
-            <button onclick="mostrarImagen()">Toque aquí (si le da la gana)</button>
+            <h1 id="titulo">Mensaje para Don Rolando Lobo (para no decirle Ramón)</h1>
+            <p id="contenido">(Esto es una sorpresita)</p>
+            <button onclick="mostrarImagen()">Dele click a este botón bro, para que vea algo</button>
         </div>
         <div id="imagen" class="oculto fade-in">
-            <img src="girasol.gif" alt="Girasol">
+            <img src="source.gif" alt="Girasol">
             <audio autoplay loop>
-                <source src="Canción.mp3" type="audio/mpeg">
+                <source src="canción.mp3" type="audio/mpeg">
             </audio>
-            <p id="frase" class="hidden">A veces las malas rachas son el comienzo de algo mejor...</p>
+            <p id="frase" class="hidden">Feliz cumpleaños mi tata, lo amo un montón...</p>
         </div>
     </div>
 
